v17.1/interfaces/GC.Spread.Sheets.Charts.IDataLabels.md
# Interface: IDataLabels

[Sheets](../modules/GC.Spread.Sheets.md).[Charts](../modules/GC.Spread.Sheets.Charts.md).IDataLabels

## Table of contents

### Properties

- [backColor](GC.Spread.Sheets.Charts.IDataLabels.md#backcolor)
- [backColorTransparency](GC.Spread.Sheets.Charts.IDataLabels.md#backcolortransparency)
- [borderColor](GC.Spread.Sheets.Charts.IDataLabels.md#bordercolor)
- [borderColorTransparency](GC.Spread.Sheets.Charts.IDataLabels.md#bordercolortransparency)
- [borderWidth](GC.Spread.Sheets.Charts.IDataLabels.md#borderwidth)
- [color](GC.Spread.Sheets.Charts.IDataLabels.md#color)
- [dataLabelsRange](GC.Spread.Sheets.Charts.IDataLabels.md#datalabelsrange)
- [format](GC.Spread.Sheets.Charts.IDataLabels.md#format)
- [numberFormatLinked](GC.Spread.Sheets.Charts.IDataLabels.md#numberformatlinked)
- [position](GC.Spread.Sheets.Charts.IDataLabels.md#position)
- [separator](GC.Spread.Sheets.Charts.IDataLabels.md#separator)
- [showCategoryName](GC.Spread.Sheets.Charts.IDataLabels.md#showcategoryname)
- [showDataLabelsRange](GC.Spread.Sheets.Charts.IDataLabels.md#showdatalabelsrange)
- [showPercentage](GC.Spread.Sheets.Charts.IDataLabels.md#showpercentage)
- [showSeriesName](GC.Spread.Sheets.Charts.IDataLabels.md#showseriesname)
- [showValue](GC.Spread.Sheets.Charts.IDataLabels.md#showvalue)
- [transparency](GC.Spread.Sheets.Charts.IDataLabels.md#transparency)

## Properties

### <a id="backcolor" name="backcolor"></a> backColor

• `Optional` **backColor**: `string` \| [`IPatternFillBackColor`](GC.Spread.Sheets.Charts.IPatternFillBackColor.md)

系列数据标签的背景颜色。

___

### <a id="backcolortransparency" name="backcolortransparency"></a> backColorTransparency

• `Optional` **backColorTransparency**: `number`

系列数据标签的背景颜色透明度。

___

### <a id="bordercolor" name="bordercolor"></a> borderColor

• `Optional` **borderColor**: `string`

系列数据标签的边框颜色。

___

### <a id="bordercolortransparency" name="bordercolortransparency"></a> borderColorTransparency

• `Optional` **borderColorTransparency**: `number`

系列数据标签的边框颜色透明度。

___

### <a id="borderwidth" name="borderwidth"></a> borderWidth

• `Optional` **borderWidth**: `number`

系列数据标签的边框宽度。

___

### <a id="color" name="color"></a> color

• `Optional` **color**: `string`

___

### <a id="format" name="format"></a> format

• `Optional` **format**: `string`

___

### <a id="position" name="position"></a> position

• `Optional` **position**: [`DataLabelPosition`](../enums/GC.Spread.Sheets.Charts.DataLabelPosition.md)

___

### <a id="separator" name="separator"></a> separator

• `Optional` **separator**: `string`

___

### <a id="showcategoryname" name="showcategoryname"></a> showCategoryName

• `Optional` **showCategoryName**: `boolean`

___

### <a id="showpercentage" name="showpercentage"></a> showPercentage

• `Optional` **showPercentage**: `boolean`

___

### <a id="showseriesname" name="showseriesname"></a> showSeriesName

• `Optional` **showSeriesName**: `boolean`

___

### <a id="showvalue" name="showvalue"></a> showValue

• `Optional` **showValue**: `boolean`

___

### <a id="transparency" name="transparency"></a> transparency

• `Optional` **transparency**: `number`
